# AI-HR

./: .env  .env.example  .gitignore  alembic.ini  env.example  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: b9eebb373aa3_.py
src/: settings.py
src/ai/: prompt.py  prompts.py  ques_gener.py
src/api/: app.py  schemas.py  shemas.py
src/api/ai/: prompts.py  ques_gener.py
src/api/routers/: __init__.py  auth.py  home.py  login.py  profile.py  registration.py  router.py  test.py  vacancies.py
src/api/templates/: exception.html  home_registered.html  home_unregistered.html  login.html  profile.html  registration.html  vacancy.html
src/core/: container.py  services.py
src/core/di/: __init__.py  container.py
src/core/di/modules/: db.py
src/core/modules/: __init__.py  user.py  vacancy.py
src/core/modules/question/: dto.py  filters.py  mapper.py  queries.py  repositories.py
src/core/modules/user/: dto.py  filters.py  mapper.py  queries.py  repositories.py
src/core/modules/vacancy/: dto.py  filters.py  mapper.py  queries.py  repositories.py
src/db/: __init__.py  base.py  constants.py  declarative_base.py
src/db/models/: __init__.py  candidate.py  interview.py  question.py  report.py  user.py  vacancy.py
