[project]
name = "AI-HR"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Gr", email = "gavrilov_ga@bk.ru"},
]
dependencies = ["fastapi>=0.116.0", "uvicorn>=0.35.0", "authx>=1.4.3", "api>=0.0.7", "openai>=1.93.2", "jiter>=0.10.0", "pydantic-core>=2.33.2", "aioinject>=1.4.3", "sqlalchemy>=2.0.41", "psycopg2>=2.9.10"]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
